# bases

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
include/terra/bases/: base16.h  base32.h  base45.h  base58.h  base64.h
src/: CMakeLists.txt  base16.cpp  base32.cpp  base45.cpp  base58.cpp  base64.cpp
test/: CMakeLists.txt
test/base16/: CMakeLists.txt  test_base16.cpp
test/base32/: CMakeLists.txt  test_base32.cpp
test/base45/: CMakeLists.txt  test_base45.cpp
test/base58/: CMakeLists.txt  test_base58.cpp
test/base64/: CMakeLists.txt  test_base64.cpp
